<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDRWeather</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="output_header">Active Events</string>
    <string name="output">\n</string>
    <string name="spinner_desc">Frequency</string>
    <string name="start">Start Monitoring</string>
    <string name="stop">Stop Monitoring</string>
    <string name="audio">Audio</string>

    <string-array name="frequency_array">
        <item name="1">162.400</item>
        <item name="2">162.425</item>
        <item name="3">162.450</item>
        <item name="4">162.475</item>
        <item name="5">162.500</item>
        <item name="6">162.525</item>
        <item name="7">162.550</item>
    </string-array>
    <string-array name="frequency_arrayValues">
        <item name="1">0</item>
        <item name="2">1</item>
        <item name="3">2</item>
        <item name="4">3</item>
        <item name="5">4</item>
        <item name="6">5</item>
        <item name="7">6</item>
    </string-array>
    
    <string name="rtlsettings">rtl_fm Settings</string>
    <string name="pref_freq_name">Default Frequency</string>
    <string name="pref_freq_summary">Default frequency on launch.</string>
    <string name="pref_gain_name">Gain</string>
    <string name="pref_gain_summary">A floating point gain value. The dongle will use the closest gain setting available.</string>
    <string name="pref_sqel_name">Squelch</string>
    <string name="pref_sqel_summary">Squelch values are extremely sensitive to external conditions (noise and antenna). When in doubt, start at zero and work upwards.</string>    
    <string name="uisettings">UI Settings</string>
    <string name="pref_country_name">Country</string>
    <string name="pref_country_summary">Country used for location code lookups.</string>
    <string-array name="country">
        <item name="1">United States</item>
        <item name="2">Canada</item>
    </string-array>
    <string-array name="countryValues">
        <item name="1">0</item>
        <item name="2">1</item>
    </string-array>
    <string name="pref_start_audio_name">Auto Unmute</string>
    <string name="pref_start_audio_summary">Unmute audio when alert is received.</string>
    
    <string name="appwidget_label">SDRWeather</string>
    <string name="app_icon_desc">SDRWeather</string>

    <string name="noactive_events">No Active Events Received</string>
    <string name="timeissued_events">Time issued</string>
    <string name="expires_events">Expires</string>
    <string name="regions_events">Regions</string>
    <string name="originator_events">Originator</string>
    <string name="callsign_events">Call Sign</string>

    <string name="toast_noroot">Root Access Not Available!</string>
    <string name="toast_nosupportdevices">Root Access Not Available!</string>
    <string name="toast_devicedisconnected">Root Access Not Available!</string>

    <string name="notification_from">from</string>
    <string name="notification_end">was issued</string>

    <string name="alert_about_title">About</string>
    <string name="alert_about_button">OK</string>

</resources>
